--- a/CredoLoan.Infrastructure/CredoLoan.Infrastructure.csproj
+++ b/CredoLoan.Infrastructure/CredoLoan.Infrastructure.csproj
@@ -34,7 +34,7 @@
 
   <ItemGroup>
     <EmbeddedResource Update="Resources\StringResources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>StringResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
